# stablq

./: .gitignore  README.md  pyproject.toml
.ipynb_checkpoints/: show-checkpoint.ipynb
examples/: __init__.py  decoding_test.py  decoding_test_2.py  main.py
notebooks/: main.ipynb  tutorial.ipynb
notebooks/tutorial/: notebook.ipynb  tutorial.ipynb
src/: lattice.py  main.py  pauli.py  pauli_frame.py  show.ipynb
src/.ipynb_checkpoints/: lattice-checkpoint.py
src/surfq/: __init__.py  lattice.py  lattice_view.py  pauli.py  plotting.py  surface.py
src/tests/: test_pauli.py  test_pauli_frame.py
