[project]
name = "surfq"
version = "0.1.0"
description = "A surface code simulator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
authors = [
    { name = "Your Name", email = "you@example.com" }
]
license = { text = "MIT" }
keywords = ["python", "project", "surfq"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.ruff]
line-length = 88
pydocstyle = { convention = "google" }
extend-ignore = ["E203"]  

[tool.ruff.lint]
select = [
    "E302",  # blank lines
    "E305",  # blank lines after class/function
    "D100",  # missing module docstring
    "D101",  # missing class docstring
    "D102",  # missing method docstring
    "D103",  # missing function docstring
]

[tool.basedpyright]
typeCheckingMode = "basic"
reportOptionalSubscript = false
reportOptionalMemberAccess = false
reportGeneralTypeIssues = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"
