[project]
name = "surfq"
version = "0.1.0"
description = "A surface code simulator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.2",
]
authors = [
    { name = "João Ramos", email = "1joaoramos1@gmail.com" }
]
license = "MIT"
keywords = ["python", "project", "surfq"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "D"]
ignore = ["E203"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.basedpyright]
typeCheckingMode = "recommended"
reportOptionalSubscript = false
reportOptionalMemberAccess = false
reportGeneralTypeIssues = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["src/tests"]
pythonpath = ["src"] 

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]
